Created simple layout for register and connected buttons and edit text

--- a/CST438-Project-Share/app/src/main/res/values/strings.xml
+++ b/CST438-Project-Share/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">CST438-Project-Share</string>
+    <string name="username">Username . . .</string>
+    <string name="password">Password . . .</string>
+    <string name="repassword">Re-enter password . . .</string>
+    <string name="Register">register</string>
 </resources>
