--- a/CST438-Project-Share/app/src/main/res/values/strings.xml
+++ b/CST438-Project-Share/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="password">Password . . .</string>
     <string name="repassword">Re-enter password . . .</string>
     <string name="Register">register</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
