--- a/CST438-Project-Share/app/src/main/res/values/strings.xml
+++ b/CST438-Project-Share/app/src/main/res/values/strings.xml
@@ -6,4 +6,10 @@
     <string name="Register">register</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="occupations_array">
+        <item>Teacher</item>
+        <item>Student</item>
+        <item>Employee</item>
+    </string-array>
 </resources>
