--- a/CST438-Project-Share/app/src/main/res/values/strings.xml
+++ b/CST438-Project-Share/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <!--    This list is for testing purposes only  -->
     <string-array name="occupations_array">
         <item>Teacher</item>
         <item>Student</item>
